--- a/index.ipynb
+++ b/index.ipynb
@@ -243,23 +243,37 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Dataset' object has no attribute 'value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m strain_H1, time_H1, chan_dict_H1 \u001b[38;5;241m=\u001b[39m \u001b[43mrl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloaddata\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn_H1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mH1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m strain_L1, time_L1, chan_dict_L1 \u001b[38;5;241m=\u001b[39m rl\u001b[38;5;241m.\u001b[39mloaddata(fn_L1, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mL1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/hw05-liasop/ligotools/readligo.py:172\u001b[0m, in \u001b[0;36mloaddata\u001b[0;34m(filename, ifo, tvec, readstrain)\u001b[0m\n\u001b[1;32m    170\u001b[0m     strain, gpsStart, ts, qmask, shortnameList, injmask, injnameList \u001b[38;5;241m=\u001b[39m read_frame(filename, ifo, readstrain)\n\u001b[1;32m    171\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 172\u001b[0m     strain, gpsStart, ts, qmask, shortnameList, injmask, injnameList \u001b[38;5;241m=\u001b[39m \u001b[43mread_hdf5\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreadstrain\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;66;03m#-- Create the time vector\u001b[39;00m\n\u001b[1;32m    175\u001b[0m gpsEnd \u001b[38;5;241m=\u001b[39m gpsStart \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mlen\u001b[39m(qmask)\n",
+      "File \u001b[0;32m~/hw05-liasop/ligotools/readligo.py:138\u001b[0m, in \u001b[0;36mread_hdf5\u001b[0;34m(filename, readstrain)\u001b[0m\n\u001b[1;32m    136\u001b[0m injInfo \u001b[38;5;241m=\u001b[39m dataFile[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquality/injections\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m    137\u001b[0m injmask \u001b[38;5;241m=\u001b[39m injInfo[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInjmask\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m]\n\u001b[0;32m--> 138\u001b[0m injnameArray \u001b[38;5;241m=\u001b[39m \u001b[43minjInfo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mInjShortnames\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalue\u001b[49m\n\u001b[1;32m    139\u001b[0m injnameList  \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(injnameArray)\n\u001b[1;32m    141\u001b[0m \u001b[38;5;66;03m#-- Read the meta data\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Dataset' object has no attribute 'value'"
+     ]
+    }
+   ],
+   "source": [
+    "strain_H1, time_H1, chan_dict_H1 = rl.loaddata(fn_H1, 'H1')\n",
+    "strain_L1, time_L1, chan_dict_L1 = rl.loaddata(fn_L1, 'L1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cannot find data files!\n",
-      "You can download them from https://losc.ligo.org/s/events/GW150914\n",
-      "Quitting.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#----------------------------------------------------------------\n",
     "# Load LIGO data from a single file.\n",
